<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelloBle" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/key_fob_demo"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="318dp"
            android:layout_height="wrap_content"
            android:src="@drawable/bluetooth_smart" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/deviceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Device: " />

            <TextView
                android:id="@+id/deviceName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="&lt;Select a Device>" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/statusLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Status: " />

            <TextView
                android:id="@+id/statusName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disconnected" />

        </LinearLayout>

        <Button
            android:id="@+id/button_selectdevice"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/button_selectdevice" />

        <Button
            android:id="@+id/button_connect"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/button_connect_text" />

        <Button
            android:id="@+id/button_disconnect"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/button_disconnect_text" />

        <Button
            android:id="@+id/button_alert"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/button_alert_text" />

        <Button
            android:id="@+id/button_getusername"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Get User Name" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textViewUserNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hello: " />

            <TextView
                android:id="@+id/textView_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="..." />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/alertLevelLabel"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:layout_marginBottom="92dp"
                android:text="@string/alert_level"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <RadioGroup
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/radioalertlevel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
	            
	            <RadioButton
	                android:id="@+id/radioButton_off"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginLeft="22dp"
	                android:checked="true"
	                android:text="@string/alert_level_off" />
	
	            <RadioButton
	                android:id="@+id/radioButton_low"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/alert_level_low" />
	
	            <RadioButton
	                android:id="@+id/radioButton_high"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/alert_level_high" />
            </RadioGroup>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>